compiler-core/src/go/tests/snapshots/gleam_core__go__tests__custom_types__const_imported_multiple_fields.snap
---
source: compiler-core/src/go/tests/custom_types.rs
expression: "import other\npub const main = other.Two(b: 2, c: 3, a: 1)\n"
snapshot_kind: text
---
----- SOURCE CODE
import other
pub const main = other.Two(b: 2, c: 3, a: 1)


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  other_P "example.com/todo/thepackage/other"
)

const _ = gleam_P.Use_Import
const _ = other_P.Use_Import
const Use_Import byte = 0

var Main other_P.One_t = other_P.Two_c{1, 2, 3}
