compiler-core/src/go/tests/snapshots/gleam_core__go__tests__custom_types__const_zero_arity_imported.snap
---
source: compiler-core/src/go/tests/custom_types.rs
expression: "import other\nconst x = other.Two\n"
snapshot_kind: text
---
----- SOURCE CODE
import other
const x = other.Two


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  other_P "example.com/todo/thepackage/other"
)

const _ = gleam_P.Use_Import
const _ = other_P.Use_Import
const Use_Import byte = 0

var x other_P.One_t = other_P.Two_c{}
