compiler-core/src/go/tests/snapshots/gleam_core__go__tests__custom_types__destructure_custom_type_with_mixed_fields_second_unlabelled.snap
---
source: compiler-core/src/go/tests/custom_types.rs
expression: "\ntype Cat {\n  Cat(name: String, Int)\n}\n\nfn go(cat) {\n  let Cat(x, y) = cat\n  let Cat(name: x, ..) = cat\n  let Cat(y, name: x) = cat\n  x\n}\n\n"
snapshot_kind: text
---
----- SOURCE CODE

type Cat {
  Cat(name: String, Int)
}

fn go(cat) {
  let Cat(x, y) = cat
  let Cat(name: x, ..) = cat
  let Cat(y, name: x) = cat
  x
}



----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

type cat_c struct {name gleam_P.String_t; p_1 gleam_P.Int_t}

func (c cat_c) Hash() uint32 {
  h := gleam_P.NewHash()
  var hh uint32
  hh = c.name.Hash()
  if _, err := h.Write([]byte{byte(hh), byte(hh >> 8), byte(hh >> 16), byte(hh >> 24)}); err != nil { panic (err) }
  hh = c.p_1.Hash()
  if _, err := h.Write([]byte{byte(hh), byte(hh >> 8), byte(hh >> 16), byte(hh >> 24)}); err != nil { panic (err) }
  return h.Sum32()
}
func (c cat_c) Equal(o cat_c) bool {
  _ = o
  if !c.name.Equal(o.name) { return false }
  if !c.p_1.Equal(o.p_1) { return false }
  return true
}

type cat_t = cat_c

func goʹ(cat cat_t) gleam_P.String_t {
  var x gleam_P.String_t = cat.name
  _ = x
  var y gleam_P.Int_t = cat.p_1
  _ = y
  var xʹ1 gleam_P.String_t = cat.name
  _ = xʹ1
  var xʹ2 gleam_P.String_t = cat.name
  _ = xʹ2
  var yʹ1 gleam_P.Int_t = cat.p_1
  _ = yʹ1
  return xʹ2
}
