compiler-core/src/go/tests/snapshots/gleam_core__go__tests__custom_types__external.snap
---
source: compiler-core/src/go/tests/custom_types.rs
expression: "\n@external(go, \"some/path\", \"SomeType\")\npub type Thing\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(go, "some/path", "SomeType")
pub type Thing


----- COMPILED GO
package mod_P

import (
  path_P "some/path"
)

const _ = path_P.Use_Import
const Use_Import byte = 0

type Thing_t = path_P.SomeType
